# CARLA_Autoware

./: README.md
GNSS_Interface/: CMakeLists.txt  package.xml
GNSS_Interface/include/gnss_interface/: gnss_interface_node.hpp
GNSS_Interface/src/gnss_interface/: gnss_interface_node.cpp
carla_autoware/: CMakeLists.txt  package.xml  setup.py
carla_autoware/launch/: carla_autoware.launch.py  carla_autoware.launch.xml  e2e_simulator.launch.xml
carla_autoware/src/carla_autoware/: carla_autoware.py
pointcloud_interface/include/pointcloud_interface/: pointcloud_interface_node.hpp
pointcloud_interface/src/pointcloud_interface/: pointcloud_interface_node.cpp
ros-bridge/carla_ros_bridge/launch/: carla_ros_bridge_with_example_ego_vehicle.launch.py
ros-bridge/carla_ros_bridge/src/carla_ros_bridge/: camera.py  gnss.py  imu.py  lidar.py
